alterei as variaveis de ambiente para guest

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ POSTGRES_PASSWORD=1234
 POSTGRES_DB=si_database
 POSTGRES_URL=jdbc:postgresql://db:5432/$POSTGRES_DB
 
-RABBIT_USER=myuser
-RABBIT_PASSWORD=mypassword
+RABBIT_USER=guest
+RABBIT_PASSWORD=guest
 HOST_RABBIT=rabbitmq
 PORT_RABBIT=5672
