--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 instance.id=${INSTANCE_ID}
+instance.lider=${LIDER_ID}
+instance.queue.name=${QUEUE_NAME}
+instance.queue.heartbeat.name=${HEART_BEAT}
+
+server.port=${PORTA:8080}
