--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 instance.id=${INSTANCE_ID}
 instance.lider=${LIDER_ID}
 instance.queue.name=${QUEUE_NAME}
-instance.queue.heartbeat.name=${HEART_BEAT}
-
+instance.queue.notfy=${NOTFY_QUEUE}
 server.port=${PORTA:8080}
